--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
 <body>
     <section class="header">
         <nav>
             <a href="index.html"><img src="logo.png"> </a>
             <div class="nav-links">
+                <i class="fa-solid fa-xmark"></i>
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -22,11 +24,12 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="fa-solid fa-bars"></i>
         </nav>
         <div class="text-box">
             <h1>World's Biggest University</h1>
             <p>Making website is now one of the easiest thing in the world.You just need to know HTML,CSS,<br>Javascript and you are good to go.</p>
-            <a href="">Visit Us To Know More</a>
+            <a href="" class="hero-btn">Visit Us To Know More</a>
 
         </div>
 
