--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>University Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
+
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="logo.png"> </a>
-            <div class="nav-links">
-                <i class="fa-solid fa-xmark"></i>
+            <a href="index.html"><img src="images/logo.png"> </a>
+            <div class="nav-links" id="navlinks">
+                <img class="logo close" src="images/close.png" alt="">
                 <ul>
                     <li><a href="">HOME</a></li>
                     <li><a href="">ABOUT</a></li>
@@ -24,15 +28,23 @@
                     <li><a href="">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa-solid fa-bars"></i>
+            <img class="logo menu" src="images/menu.png" alt="">
         </nav>
         <div class="text-box">
             <h1>World's Biggest University</h1>
-            <p>Making website is now one of the easiest thing in the world.You just need to know HTML,CSS,<br>Javascript and you are good to go.</p>
+            <p>Making website is now one of the easiest thing in the world.You just need to know HTML,CSS,<br>Javascript
+                and you are good to go.</p>
             <a href="" class="hero-btn">Visit Us To Know More</a>
 
         </div>
 
     </section>
+    <!-- -------course------- -->
+    <section class="course">
+        <h1>Course We Offer</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
+    </section>
+    <script src="script.js"></script>
 </body>
+
 </html>
