--- a/index.html
+++ b/index.html
@@ -43,7 +43,79 @@
     <section class="course">
         <h1>Course We Offer</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
+        <div class="row">
+            <div class="course-col">
+                <h3>Intermediate</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim officiis asperiores voluptate
+                    aliquam blanditiis eum repellat! Aliquid adipisci praesentium non eaque exercitationem, asperiores,
+                    quisquam vel ducimus eveniet in aperiam maiores, tenetur doloribus nesciunt officia aliquam alias
+                    minima molestias nisi. Cumque deserunt dolore architecto rerum.</p>
+            </div>
+            <div class="course-col">
+                <h3>Degree</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim officiis asperiores voluptate
+                    aliquam blanditiis eum repellat! Aliquid adipisci praesetion non eaque exercitationem, asperiores,
+                    quisquam vel ducimus eveniet in aperiam maiores, tenetur doloribus nesciunt officia aliquam alias
+                    minima molestias nisi. Cumque deserunt dolore architecto rerum.</p>
+            </div>
+            <div class="course-col">
+                <h3>Post-Graduation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius enim officiis asperiores voluptate
+                    aliquam blanditiis eum repellat! Aliquid adipisci praesentium non eaque exercitationem, asperiores,
+                    quisquam vel ducimus eveniet in aperiam maiores, tenetur doloribus nesciunt officia aliquam alias
+                    minima molestias nisi. Cumque deserunt dolore architecto rerum.</p>
+            </div>
+        </div>
     </section>
+
+    <!-- --------campus--------->
+     <section class="campus">
+        <h1>Our Global Campus</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
+        <div class="row">
+            <div class="campus-col">
+                <img src="images/london.png" >
+                <div class="layer">
+                    <h3>LONDON</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/newyork.png" >
+                <div class="layer">
+                    <h3>NEW YORK</h3>
+                </div>
+            </div>
+            <div class="campus-col">
+                <img src="images/washington.png" >
+                <div class="layer">
+                    <h3>WASHINGTON</h3>
+                </div>
+            </div>
+        </div>
+     </section>
+
+     <!-- -------facilities--------->
+      <section class="facilities">
+        <h1>Our Facilities</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
+        <div class="row">
+            <div class="facilities-col">
+                <img src="images/library.png" alt="">
+                <h3>World Class Library</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/basketball.png" alt="">
+                <h3>Largest Play Ground</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+            </div>
+            <div class="facilities-col">
+                <img src="images/cafeteria.png" alt="">
+                <h3>Tasty And Healthy Food</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+            </div>
+        </div>
+      </section>
     <script src="script.js"></script>
 </body>
 
