--- a/index.html
+++ b/index.html
@@ -69,53 +69,94 @@
     </section>
 
     <!-- --------campus--------->
-     <section class="campus">
+    <section class="campus">
         <h1>Our Global Campus</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
         <div class="row">
             <div class="campus-col">
-                <img src="images/london.png" >
+                <img src="images/london.png">
                 <div class="layer">
                     <h3>LONDON</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/newyork.png" >
+                <img src="images/newyork.png">
                 <div class="layer">
                     <h3>NEW YORK</h3>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/washington.png" >
+                <img src="images/washington.png">
                 <div class="layer">
                     <h3>WASHINGTON</h3>
                 </div>
             </div>
         </div>
-     </section>
+    </section>
 
-     <!-- -------facilities--------->
-      <section class="facilities">
+    <!-- -------facilities--------->
+    <section class="facilities">
         <h1>Our Facilities</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
         <div class="row">
             <div class="facilities-col">
                 <img src="images/library.png" alt="">
                 <h3>World Class Library</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id,
+                    inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
             </div>
             <div class="facilities-col">
                 <img src="images/basketball.png" alt="">
                 <h3>Largest Play Ground</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id,
+                    inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
             </div>
             <div class="facilities-col">
                 <img src="images/cafeteria.png" alt="">
                 <h3>Tasty And Healthy Food</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id, inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugit blanditiis quisquam id,
+                    inventore alias placeat nulla, qui ab repudiandae fugiat tempore odio numquam unde.</p>
             </div>
         </div>
-      </section>
+    </section>
+
+    <!-- -------Testimonials-------->
+    <section class="Testimonials">
+        <h1>What Our Student Says</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro!</p>
+        <div class="row">
+            <div class="testimonilas-col">
+                <img src="images/user1.jpg">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae harum quasi voluptas necessitatibus
+                        provident te, perspiciatis repudiandae odio atque nemo saepe obcaecati facere? Repudiandae quis
+                        sit laboriosam a corrupti animi soluta doloremque, autem dignissimos dolorem consectetur unde.
+                    </p>
+                    <h3>Christine Berkley</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="m6.516 14.323-1.49 6.452a.998.998 0 0 0 1.529 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082a1 1 0 0 0-.59-1.74l-5.701-.454-2.467-5.461a.998.998 0 0 0-1.822 0L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.214 4.107zm2.853-4.326a.998.998 0 0 0 .832-.586L12 5.43l1.799 3.981a.998.998 0 0 0 .832.586l3.972.315-3.271 2.944c-.284.256-.397.65-.293 1.018l1.253 4.385-3.736-2.491a.995.995 0 0 0-1.109 0l-3.904 2.603 1.05-4.546a1 1 0 0 0-.276-.94l-3.038-2.962 4.09-.326z"></path></svg>
+                </div>
+            </div>
+            <div class="testimonilas-col">
+                <img src="images/user2.jpg">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae harum quasi voluptas necessitatibus
+                        provident te, perspiciatis repudiandae odio atque nemo saepe obcaecati facere? Repudiandae quis
+                        sit laboriosam a corrupti animi soluta doloremque, autem dignissimos dolorem consectetur unde.
+                    </p>
+                    <h3>David Byer</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M21.947 9.179a1.001 1.001 0 0 0-.868-.676l-5.701-.453-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.213 4.107-1.49 6.452a1 1 0 0 0 1.53 1.057L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082c.297-.268.406-.686.278-1.065z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" style="fill: rgb(253, 108, 108);"><path d="M5.025 20.775A.998.998 0 0 0 6 22a1 1 0 0 0 .555-.168L12 18.202l5.445 3.63a1.001 1.001 0 0 0 1.517-1.106l-1.829-6.4 4.536-4.082a1 1 0 0 0-.59-1.74l-5.701-.454-2.467-5.461a.998.998 0 0 0-1.822-.001L8.622 8.05l-5.701.453a1 1 0 0 0-.619 1.713l4.214 4.107-1.491 6.452zM12 5.429l2.042 4.521.588.047h.001l3.972.315-3.271 2.944-.001.002-.463.416.171.597v.003l1.253 4.385L12 15.798V5.429z"></path></svg>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 
